# backend-actix-web

./: Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  health.hurl
config/: default.toml  dev.toml  prod.toml
src/: config.rs  main.rs  pilot.rs
src/infrastructure/: config.rs  doc.txt  mod.rs
src/infrastructure/db/: mod.rs
